# BF-INTERPRETER

./: CMakeLists.txt  README.md
include/: IRGenerator.hpp  IRInterpreter.hpp  Lexer.hpp
src/: IRGenerator.cpp  IRInterpreter.cpp  Lexer.cpp  Main.cpp
